--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = [
     { name = "oakwood-fujiken", email = "oakwood.n14.4sp@keio.jp" }
 ]
 dependencies = [
-    "numpy>=2.1.2",
+    "numpy==1.26",
     "pyrealsense2>=2.55.1.6486",
     "opencv-python>=4.10.0.84",
+    "numba==0.59",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
